--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EdgeLedger Financial | Accounting & Investment</title>
+    <link rel="icon" href="IMG/E.png" type="image/png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" media="screen and (max-width:768px)" href="mobile.css">
     <link rel="stylesheet" media="screen and (min-width:769px) and (max-width:1100px)" href="widescreen.css">
